--- a/ansible/roles/trove/templates/trove-taskmanager.json.j2
+++ b/ansible/roles/trove/templates/trove-taskmanager.json.j2
@@ -6,7 +6,19 @@
             "dest": "/etc/trove/trove-taskmanager.conf",
             "owner": "trove",
             "perm": "0600"
-    }{% if trove_policy_file is defined %},
+        },
+        {
+            "source": "{{ container_config_directory }}/trove-guestagent.conf",
+            "dest": "/etc/trove/trove-guestagent.conf",
+            "owner": "trove",
+            "perm": "0600"
+        },
+        {
+            "source": "{{ container_config_directory }}/cloudinit",
+            "dest": "/etc/trove/cloudinit",
+            "owner": "trove",
+            "perm": "0700"
+        }{% if trove_policy_file is defined %},
         {
             "source": "{{ container_config_directory }}/{{ trove_policy_file }}",
             "dest": "/etc/trove/{{ trove_policy_file }}",
